--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Black Background</title>
+    <style>
+        body {
+            background-color: black;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to the Black Background Page</h1>
+</body>
+</html>
