--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to the Black Background Page</h1>
+    <h1>Testing site page.</h1>
 </body>
 </html>
