--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskmatrix Login</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to right, #1a1a2e, #16213e);
+            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
             color: white;
             display: flex;
             justify-content: center;
@@ -15,36 +17,59 @@
             height: 100vh;
             margin: 0;
         }
+
         .login-container {
             background: #0f3460;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            width: 300px;
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            width: 350px;
             text-align: center;
+            transition: all 0.3s ease;
         }
+
+        .login-container h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            letter-spacing: 1px;
+        }
+
         .login-container input {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
+            padding: 12px;
+            margin: 12px 0;
             border: none;
-            border-radius: 5px;
-            background: #e94560;
+            border-radius: 8px;
+            background: rgba(233, 69, 96, 0.9);
             color: white;
+            font-size: 16px;
+            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
         }
+
+        .login-container input:focus {
+            outline: none;
+            box-shadow: 0 0 10px rgba(233, 69, 96, 0.9), inset 0 0 5px rgba(0, 0, 0, 0.5);
+        }
+
         .login-container button {
             width: 100%;
-            padding: 10px;
-            background: #16213e;
+            padding: 12px;
+            background: linear-gradient(to right, #1a1a2e, #16213e);
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             color: white;
             font-weight: bold;
-            transition: background 0.3s;
+            font-size: 18px;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
+
         .login-container button:hover {
-            background: #1a1a2e;
+            background: linear-gradient(to right, #16213e, #1a1a2e);
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
         }
     </style>
 </head>
