--- a/index.html
+++ b/index.html
@@ -16,26 +16,33 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
         }
 
-        .login-container {
+        .container {
+            perspective: 1000px;
+        }
+
+        .form-container {
             background: #0f3460;
             padding: 25px;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
             width: 350px;
             text-align: center;
-            transition: all 0.3s ease;
+            transition: all 0.6s ease-in-out;
+            transform-style: preserve-3d;
+            position: relative;
         }
 
-        .login-container h2 {
+        .form-container h2 {
             font-size: 24px;
             margin-bottom: 20px;
             letter-spacing: 1px;
         }
 
-        .login-container input {
-            width: 100%;
+        .form-container input {
+            width: calc(100% - 24px);
             padding: 12px;
             margin: 12px 0;
             border: none;
@@ -47,12 +54,12 @@
             transition: all 0.3s ease;
         }
 
-        .login-container input:focus {
+        .form-container input:focus {
             outline: none;
             box-shadow: 0 0 10px rgba(233, 69, 96, 0.9), inset 0 0 5px rgba(0, 0, 0, 0.5);
         }
 
-        .login-container button {
+        .form-container button {
             width: 100%;
             padding: 12px;
             background: linear-gradient(to right, #1a1a2e, #16213e);
@@ -66,21 +73,80 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
-        .login-container button:hover {
+        .form-container button:hover {
             background: linear-gradient(to right, #16213e, #1a1a2e);
             transform: scale(1.05);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
         }
+
+        .form-container .flip-link {
+            color: #e94560;
+            cursor: pointer;
+            font-size: 14px;
+            display: block;
+            margin-top: 10px;
+            transition: color 0.3s;
+        }
+
+        .form-container .flip-link:hover {
+            color: #ff6b81;
+        }
+
+        .login-form, .signup-form {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            backface-visibility: hidden;
+        }
+
+        .signup-form {
+            transform: rotateY(180deg);
+        }
+
+        .container.flip .form-container {
+            transform: rotateY(180deg);
+        }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Taskmatrix Login</h2>
-        <form id="loginForm">
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
+    <div class="container">
+        <div class="form-container" id="formContainer">
+            <div class="login-form">
+                <h2>Taskmatrix Login</h2>
+                <form id="loginForm">
+                    <input type="email" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                </form>
+                <span class="flip-link" onclick="flipToSignup()">Create Account</span>
+            </div>
+            <div class="signup-form">
+                <h2>Sign Up</h2>
+                <form id="signupForm">
+                    <input type="text" placeholder="Username" required>
+                    <input type="email" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <span class="flip-link" onclick="flipToLogin()">Already have an account? Log in</span>
+            </div>
+        </div>
     </div>
+
+    <script>
+        document.getElementById('loginForm').onsubmit = function(event) {
+            event.preventDefault(); // Prevent the form from submitting normally
+            window.location.href = 'dashboard.html'; // Redirect to dashboard.html after login
+        };
+
+        function flipToSignup() {
+            document.getElementById('formContainer').classList.add('flip');
+        }
+
+        function flipToLogin() {
+            document.getElementById('formContainer').classList.remove('flip');
+        }
+    </script>
 </body>
 </html>
