--- a/index.html
+++ b/index.html
@@ -4,7 +4,163 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskmatrix Login</title>
+    <style><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Taskmatrix Login</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        .container {
+            perspective: 1000px;
+        }
+
+        .form-container {
+            background: #0a192f;
+            padding: 35px;
+            border-radius: 20px;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.7);
+            width: 380px;
+            text-align: center;
+            transition: all 0.6s ease-in-out;
+            transform-style: preserve-3d;
+            position: relative;
+        }
+
+        .form-container h2 {
+            font-size: 28px;
+            margin-bottom: 25px;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+            background: linear-gradient(to right, #16213e, #0f3460);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        .form-container input {
+            width: calc(100% - 30px);
+            padding: 15px;
+            margin: 15px 0;
+            border: none;
+            border-radius: 10px;
+            background: rgba(233, 69, 96, 0.85);
+            color: white;
+            font-size: 18px;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
+        }
+
+        .form-container input:focus {
+            outline: none;
+            box-shadow: 0 0 15px rgba(233, 69, 96, 0.9), inset 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .form-container button {
+            width: 100%;
+            padding: 15px;
+            background: linear-gradient(to right, #1a1a2e, #16213e);
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            color: white;
+            font-weight: bold;
+            font-size: 20px;
+            transition: all 0.4s ease;
+            box-shadow: 0 7px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .form-container button:hover {
+            background: linear-gradient(to right, #16213e, #1a1a2e);
+            transform: scale(1.07);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6);
+        }
+
+        .form-container .flip-link {
+            color: #e94560;
+            cursor: pointer;
+            font-size: 16px;
+            display: block;
+            margin-top: 20px;
+            transition: color 0.4s;
+        }
+
+        .form-container .flip-link:hover {
+            color: #ff6b81;
+        }
+
+        .login-form, .signup-form {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            backface-visibility: hidden;
+        }
+
+        .signup-form {
+            transform: rotateY(180deg);
+        }
+
+        .container.flip .form-container {
+            transform: rotateY(180deg);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="form-container" id="formContainer">
+            <div class="login-form">
+                <h2>Taskmatrix Login</h2>
+                <form id="loginForm">
+                    <input type="email" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                </form>
+                <span class="flip-link" onclick="flipToSignup()">Create Account</span>
+            </div>
+            <div class="signup-form">
+                <h2>Sign Up</h2>
+                <form id="signupForm">
+                    <input type="text" placeholder="Username" required>
+                    <input type="email" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <span class="flip-link" onclick="flipToLogin()">Already have an account? Log in</span>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('loginForm').onsubmit = function(event) {
+            event.preventDefault(); // Prevent the form from submitting normally
+            window.location.href = 'dashboard.html'; // Redirect to dashboard.html after login
+        };
+
+        function flipToSignup() {
+            document.getElementById('formContainer').classList.add('flip');
+        }
+
+        function flipToLogin() {
+            document.getElementById('formContainer').classList.remove('flip');
+        }
+    </script>
+</body>
+</html>
+
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
         body {
