--- a/index.html
+++ b/index.html
@@ -4,305 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskmatrix Login</title>
-    <style><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taskmatrix Login</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
         body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
         }
 
         .container {
-            perspective: 1000px;
-        }
-
-        .form-container {
-            background: #0a192f;
-            padding: 35px;
-            border-radius: 20px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.7);
-            width: 380px;
-            text-align: center;
-            transition: all 0.6s ease-in-out;
-            transform-style: preserve-3d;
-            position: relative;
-        }
-
-        .form-container h2 {
-            font-size: 28px;
-            margin-bottom: 25px;
-            letter-spacing: 1.5px;
-            text-transform: uppercase;
-            background: linear-gradient(to right, #16213e, #0f3460);
-            -webkit-background-clip: text;
-            color: transparent;
-        }
-
-        .form-container input {
-            width: calc(100% - 30px);
-            padding: 15px;
-            margin: 15px 0;
-            border: none;
+            max-width: 400px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: #fff;
+            border: 1px solid #ddd;
             border-radius: 10px;
-            background: rgba(233, 69, 96, 0.85);
-            color: white;
-            font-size: 18px;
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        .form-container input:focus {
-            outline: none;
-            box-shadow: 0 0 15px rgba(233, 69, 96, 0.9), inset 0 0 10px rgba(0, 0, 0, 0.5);
+        .login-container {
+            padding: 20px;
         }
 
-        .form-container button {
-            width: 100%;
-            padding: 15px;
-            background: linear-gradient(to right, #1a1a2e, #16213e);
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            color: white;
-            font-weight: bold;
-            font-size: 20px;
-            transition: all 0.4s ease;
-            box-shadow: 0 7px 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .form-container button:hover {
-            background: linear-gradient(to right, #16213e, #1a1a2e);
-            transform: scale(1.07);
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6);
-        }
-
-        .form-container .flip-link {
-            color: #e94560;
-            cursor: pointer;
-            font-size: 16px;
-            display: block;
-            margin-top: 20px;
-            transition: color 0.4s;
-        }
-
-        .form-container .flip-link:hover {
-            color: #ff6b81;
-        }
-
-        .login-form, .signup-form {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            backface-visibility: hidden;
-        }
-
-        .signup-form {
-            transform: rotateY(180deg);
-        }
-
-        .container.flip .form-container {
-            transform: rotateY(180deg);
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="form-container" id="formContainer">
-            <div class="login-form">
-                <h2>Taskmatrix Login</h2>
-                <form id="loginForm">
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Login</button>
-                </form>
-                <span class="flip-link" onclick="flipToSignup()">Create Account</span>
-            </div>
-            <div class="signup-form">
-                <h2>Sign Up</h2>
-                <form id="signupForm">
-                    <input type="text" placeholder="Username" required>
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Sign Up</button>
-                </form>
-                <span class="flip-link" onclick="flipToLogin()">Already have an account? Log in</span>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        document.getElementById('loginForm').onsubmit = function(event) {
-            event.preventDefault(); // Prevent the form from submitting normally
-            window.location.href = 'dashboard.html'; // Redirect to dashboard.html after login
-        };
-
-        function flipToSignup() {
-            document.getElementById('formContainer').classList.add('flip');
-        }
-
-        function flipToLogin() {
-            document.getElementById('formContainer').classList.remove('flip');
-        }
-    </script>
-</body>
-</html>
-
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .container {
-            perspective: 1000px;
-        }
-
-        .form-container {
-            background: #0f3460;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-            width: 350px;
+        h1 {
             text-align: center;
-            transition: all 0.6s ease-in-out;
-            transform-style: preserve-3d;
-            position: relative;
-        }
-
-        .form-container h2 {
-            font-size: 24px;
             margin-bottom: 20px;
-            letter-spacing: 1px;
         }
 
-        .form-container input {
-            width: calc(100% - 24px);
-            padding: 12px;
-            margin: 12px 0;
-            border: none;
-            border-radius: 8px;
-            background: rgba(233, 69, 96, 0.9);
-            color: white;
-            font-size: 16px;
-            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease;
+        .form-group {
+            margin-bottom: 20px;
         }
 
-        .form-container input:focus {
-            outline: none;
-            box-shadow: 0 0 10px rgba(233, 69, 96, 0.9), inset 0 0 5px rgba(0, 0, 0, 0.5);
-        }
-
-        .form-container button {
-            width: 100%;
-            padding: 12px;
-            background: linear-gradient(to right, #1a1a2e, #16213e);
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            transition: all 0.3s ease;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .form-container button:hover {
-            background: linear-gradient(to right, #16213e, #1a1a2e);
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-        }
-
-        .form-container .flip-link {
-            color: #e94560;
-            cursor: pointer;
-            font-size: 14px;
+        label {
             display: block;
-            margin-top: 10px;
-            transition: color 0.3s;
+            margin-bottom: 10px;
         }
 
-        .form-container .flip-link:hover {
-            color: #ff6b81;
-        }
-
-        .login-form, .signup-form {
-            position: absolute;
-            top: 0;
-            left: 0;
+        input[type="email"], input[type="password"] {
             width: 100%;
-            backface-visibility: hidden;
+            height: 40px;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
-        .signup-form {
-            transform: rotateY(180deg);
+        button[type="submit"] {
+            width: 100%;
+            height: 40px;
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
-        .container.flip .form-container {
-            transform: rotateY(180deg);
+        button[type="submit"]:hover {
+            background-color: #3e8e41;
+        }
+
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+        }
+
+        a:hover {
+            color: #3e8e41;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="form-container" id="formContainer">
-            <div class="login-form">
-                <h2>Taskmatrix Login</h2>
-                <form id="loginForm">
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Login</button>
-                </form>
-                <span class="flip-link" onclick="flipToSignup()">Create Account</span>
-            </div>
-            <div class="signup-form">
-                <h2>Sign Up</h2>
-                <form id="signupForm">
-                    <input type="text" placeholder="Username" required>
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Sign Up</button>
-                </form>
-                <span class="flip-link" onclick="flipToLogin()">Already have an account? Log in</span>
-            </div>
+        <div class="login-container">
+            <h1>Taskmatrix Login</h1>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </div>
     </div>
 
     <script>
-        document.getElementById('loginForm').onsubmit = function(event) {
-            event.preventDefault(); // Prevent the form from submitting normally
-            window.location.href = 'dashboard.html'; // Redirect to dashboard.html after login
-        };
-
-        function flipToSignup() {
-            document.getElementById('formContainer').classList.add('flip');
-        }
-
-        function flipToLogin() {
-            document.getElementById('formContainer').classList.remove('flip');
-        }
+        // Add event listener to the form to handle login functionality
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Add your login functionality here
+        });
     </script>
 </body>
 </html>
