--- a/index.html
+++ b/index.html
@@ -5,98 +5,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskmatrix Login</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1a1a2e, #0f3460, #16213e);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
         }
 
-        .container {
-            max-width: 400px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .login-container {
-            padding: 20px;
-        }
-
-        h1 {
+        .login-wrapper {
+            background: #0a192f;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+            width: 400px;
             text-align: center;
-            margin-bottom: 20px;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.6s ease-in-out;
         }
 
-        .form-group {
-            margin-bottom: 20px;
+        .login-wrapper::before, .login-wrapper::after {
+            content: '';
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            top: -50%;
+            left: -50%;
+            z-index: -1;
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
+            transition: transform 0.6s ease-in-out;
         }
 
-        label {
-            display: block;
-            margin-bottom: 10px;
+        .login-wrapper::before {
+            transform: rotate(45deg);
         }
 
-        input[type="email"], input[type="password"] {
-            width: 100%;
-            height: 40px;
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .login-wrapper::after {
+            transform: rotate(-45deg);
         }
 
-        button[type="submit"] {
-            width: 100%;
-            height: 40px;
-            background-color: #4CAF50;
+        .login-wrapper:hover::before, .login-wrapper:hover::after {
+            transform: rotate(0);
+        }
+
+        h2 {
+            font-size: 30px;
+            margin-bottom: 25px;
             color: #fff;
-            padding: 10px;
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
+            -webkit-background-clip: text;
+            color: transparent;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        input {
+            width: calc(100% - 30px);
+            padding: 15px;
+            margin: 15px 0;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            font-size: 16px;
+            transition: all 0.3s ease;
+        }
+
+        input:focus {
+            outline: none;
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+
+        button {
+            width: 100%;
+            padding: 15px;
+            margin-top: 20px;
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
+            border: none;
+            border-radius: 10px;
             cursor: pointer;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: all 0.3s ease;
+            box-shadow: 0 7px 20px rgba(255, 75, 43, 0.5);
         }
 
-        button[type="submit"]:hover {
-            background-color: #3e8e41;
+        button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 30px rgba(255, 75, 43, 0.7);
         }
 
-        a {
-            text-decoration: none;
-            color: #4CAF50;
+        .flip-link {
+            color: #ff416c;
+            cursor: pointer;
+            font-size: 16px;
+            display: block;
+            margin-top: 20px;
+            transition: color 0.3s;
         }
 
-        a:hover {
-            color: #3e8e41;
+        .flip-link:hover {
+            color: #ff6f91;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="login-container">
-            <h1>Taskmatrix Login</h1>
-            <form>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit">Login</button>
-            </form>
-            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-        </div>
+    <div class="login-wrapper">
+        <h2>Taskmatrix Login</h2>
+        <form id="loginForm">
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <span class="flip-link" onclick="flipToSignup()">Create Account</span>
     </div>
 
     <script>
-        // Add event listener to the form to handle login functionality
-        document.querySelector('form').addEventListener('submit', function(event) {
+        document.getElementById('loginForm').onsubmit = function(event) {
             event.preventDefault();
-            // Add your login functionality here
-        });
+            window.location.href = 'dashboard.html';
+        };
+
+        function flipToSignup() {
+            alert('Signup screen not implemented yet.');
+        }
     </script>
 </body>
 </html>
