--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             padding: 40px;
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
-            width: 400px;
+            width: 100%;
+            max-width: 400px;
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -115,6 +116,59 @@
 
         .flip-link:hover {
             color: #ff6f91;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 20px;
+            }
+
+            .login-wrapper {
+                padding: 30px;
+                border-radius: 15px;
+                box-shadow: 0 7px 20px rgba(0, 0, 0, 0.7);
+            }
+
+            h2 {
+                font-size: 26px;
+                margin-bottom: 20px;
+            }
+
+            input {
+                padding: 12px;
+                font-size: 14px;
+            }
+
+            button {
+                padding: 12px;
+                font-size: 16px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .login-wrapper {
+                padding: 20px;
+                border-radius: 10px;
+            }
+
+            h2 {
+                font-size: 22px;
+                margin-bottom: 15px;
+            }
+
+            input {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            button {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            .flip-link {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
