--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         };
 
         function flipToSignup() {
-            window.location.href = 'signup.html'; // Redirect to signup.html page
+            window.location.href = 'signup.html'; // Redirects to signup.html page
         }
     </script>
 </body>
