--- a/signup.html
+++ b/signup.html
@@ -191,7 +191,7 @@
         };
 
         function flipToLogin() {
-            window.location.href = 'login.html'; // Change this to the actual login page URL
+            window.location.href = 'index.html';
         }
     </script>
 </body>
