--- a/signup.html
+++ b/signup.html
@@ -191,7 +191,7 @@
         };
 
         function flipToLogin() {
-            window.location.href = 'index.html';
+            window.location.href = 'index.html'; // Redirects to the main HTML page
         }
     </script>
 </body>
