--- a/index.html
+++ b/index.html
@@ -92,12 +92,17 @@
             font-size: 16px;
             transition: all 0.3s ease;
             display: none;
+            width: auto;
+            min-width: 150px;
+            max-width: 250px;
+            text-align: center;
+            box-shadow: 0 7px 20px rgba(0, 133, 81, 0.5);
         }
 
         .dashboard-button:hover {
             background: linear-gradient(45deg, #1cb5e0, #1c8de0);
             transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(0, 133, 81, 0.5);
+            box-shadow: 0 10px 30px rgba(0, 133, 81, 0.7);
         }
 
         .flip-link {
@@ -138,6 +143,12 @@
                 padding: 12px;
                 font-size: 16px;
             }
+
+            .dashboard-button {
+                min-width: 120px;
+                max-width: 200px;
+                font-size: 14px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -163,6 +174,12 @@
 
             .flip-link {
                 font-size: 14px;
+            }
+
+            .dashboard-button {
+                min-width: 100px;
+                max-width: 150px;
+                font-size: 12px;
             }
         }
     </style>
