--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 
         .sidebar {
             width: 250px;
-            background: #16213e;
+            background: #0f3460;
             display: flex;
             flex-direction: column;
             padding: 20px;
@@ -47,35 +47,41 @@
         }
 
         .sidebar .nav-item a:hover {
-            background: #0f3460;
+            background: rgba(233, 69, 96, 0.2);
+            color: #fff;
         }
 
         .main-content {
             flex-grow: 1;
             padding: 30px;
+            background: #16213e;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background: #1a1a2e;
+            overflow-y: auto;
         }
 
         .main-content h1 {
             font-size: 36px;
             margin-bottom: 20px;
+            text-align: center;
+            letter-spacing: 1px;
         }
 
         .content-section {
-            background: #0f3460;
+            background: #1a1a2e;
             padding: 20px;
             border-radius: 10px;
             width: 80%;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
         }
 
         .content-section h2 {
             font-size: 28px;
             margin-bottom: 10px;
+            color: #e94560;
         }
 
         .content-section p {
@@ -85,7 +91,8 @@
 
         .welcome-message {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            font-size: 32px;
         }
     </style>
 </head>
@@ -101,8 +108,8 @@
     </div>
 
     <div class="main-content">
-        <div class="welcome-message">
-            <h1>Welcome, gmail user</h1>
+        <div id="welcomeMessage" class="welcome-message">
+            <h1>Welcome, User</h1>
         </div>
         <div id="assignments" class="content-section" style="display: none;">
             <h2>Assignments</h2>
@@ -126,6 +133,19 @@
 
         // Default section to show when dashboard loads
         showContent('assignments');
+
+        // Function to display the user's email
+        function displayWelcomeMessage() {
+            const email = localStorage.getItem('userEmail') || 'User';
+            const username = email.split('@')[0];
+            document.getElementById('welcomeMessage').innerHTML = `<h1>Hello, ${username}</h1>`;
+        }
+
+        // Simulate user login by storing email (In a real scenario, you'd capture this from the login form)
+        localStorage.setItem('userEmail', 'testuser@example.com'); // Example email, replace with actual email
+
+        // Display the welcome message with the username
+        displayWelcomeMessage();
     </script>
 </body>
 </html>
