--- a/dashboard.html
+++ b/dashboard.html
@@ -14,36 +14,37 @@
             height: 100vh;
             background-color: #1a1a2e;
             color: white;
+            overflow: hidden;
         }
 
         .sidebar {
-            width: 250px;
+            width: 280px;
             background: #0f3460;
             display: flex;
             flex-direction: column;
-            padding: 20px;
+            padding: 30px 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .sidebar h2 {
-            font-size: 24px;
+            font-size: 28px;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         .sidebar .nav-item {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         .sidebar .nav-item a {
             text-decoration: none;
             color: #e94560;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 20px;
             display: block;
-            padding: 10px;
-            border-radius: 5px;
-            transition: background 0.3s ease;
+            padding: 12px;
+            border-radius: 8px;
+            transition: background 0.3s ease, color 0.3s ease;
         }
 
         .sidebar .nav-item a:hover {
@@ -53,47 +54,110 @@
 
         .main-content {
             flex-grow: 1;
-            padding: 30px;
+            padding: 40px;
             background: #16213e;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             overflow-y: auto;
         }
 
         .main-content h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            margin-bottom: 30px;
             text-align: center;
             letter-spacing: 1px;
         }
 
         .content-section {
             background: #1a1a2e;
-            padding: 20px;
-            border-radius: 10px;
-            width: 80%;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            margin-bottom: 20px;
+            padding: 25px;
+            border-radius: 12px;
+            width: 90%;
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.5);
+            margin-bottom: 30px;
+            max-width: 800px;
         }
 
         .content-section h2 {
-            font-size: 28px;
-            margin-bottom: 10px;
+            font-size: 30px;
+            margin-bottom: 15px;
             color: #e94560;
         }
 
-        .content-section p {
-            font-size: 16px;
-            line-height: 1.6;
+        .content-section label {
+            display: block;
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: #fff;
         }
 
-        .welcome-message {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 32px;
+        .content-section input[type="text"],
+        .content-section textarea {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 20px;
+            border: none;
+            border-radius: 8px;
+            background: #0f3460;
+            color: white;
+            font-size: 16px;
+            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
         }
+
+        .content-section button {
+            padding: 12px 20px;
+            background: #e94560;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: background 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            margin-right: 10px;
+        }
+
+        .content-section button:hover {
+            background: #d03350;
+        }
+
+        .assignment-list {
+            margin-top: 30px;
+        }
+
+        .assignment-item {
+            background: #0f3460;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .assignment-item span {
+            font-size: 18px;
+            color: #fff;
+        }
+
+        .assignment-actions button {
+            padding: 8px 15px;
+            font-size: 16px;
+            background: #16213e;
+            color: white;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .assignment-actions button:hover {
+            background: #1a1a2e;
+        }
+
     </style>
 </head>
 <body>
@@ -111,10 +175,22 @@
         <div id="welcomeMessage" class="welcome-message">
             <h1>Welcome, User</h1>
         </div>
+
         <div id="assignments" class="content-section" style="display: none;">
             <h2>Assignments</h2>
-            <p>Here you can add, view, and edit your assignments.</p>
+            <label for="assignmentName">Assignment Name:</label>
+            <input type="text" id="assignmentName" placeholder="Enter assignment name">
+
+            <label for="assignmentNotes">Notes:</label>
+            <textarea id="assignmentNotes" rows="4" placeholder="Enter your notes"></textarea>
+
+            <button onclick="addAssignment()">Add Assignment</button>
+
+            <div class="assignment-list" id="assignmentList">
+                <!-- Dynamically generated assignments will appear here -->
+            </div>
         </div>
+
         <div id="class-notifications" class="content-section" style="display: none;">
             <h2>Class Notifications</h2>
             <p>Set up class times and get notified when it's time to attend.</p>
@@ -123,29 +199,63 @@
 
     <script>
         function showContent(section) {
-            // Hide all sections
             document.getElementById('assignments').style.display = 'none';
             document.getElementById('class-notifications').style.display = 'none';
 
-            // Show the selected section
             document.getElementById(section).style.display = 'block';
         }
 
-        // Default section to show when dashboard loads
-        showContent('assignments');
-
-        // Function to display the user's email
         function displayWelcomeMessage() {
             const email = localStorage.getItem('userEmail') || 'User';
             const username = email.split('@')[0];
-            document.getElementById('welcomeMessage').innerHTML = `<h1>Hello, ${username}</h1>`;
+            document.getElementById('welcomeMessage').innerHTML = `<h1>Welcome, ${username}</h1>`;
         }
 
-        // Simulate user login by storing email (In a real scenario, you'd capture this from the login form)
-        localStorage.setItem('userEmail', 'testuser@example.com'); // Example email, replace with actual email
+        function addAssignment() {
+            const assignmentName = document.getElementById('assignmentName').value;
+            const assignmentNotes = document.getElementById('assignmentNotes').value;
 
-        // Display the welcome message with the username
+            if (assignmentName === '') {
+                alert('Please enter an assignment name');
+                return;
+            }
+
+            const assignmentItem = document.createElement('div');
+            assignmentItem.classList.add('assignment-item');
+
+            assignmentItem.innerHTML = `
+                <span>${assignmentName}</span>
+                <div class="assignment-actions">
+                    <button onclick="editAssignment(this)">Edit</button>
+                    <button onclick="deleteAssignment(this)">Delete</button>
+                </div>
+                <p>${assignmentNotes}</p>
+            `;
+
+            document.getElementById('assignmentList').appendChild(assignmentItem);
+
+            document.getElementById('assignmentName').value = '';
+            document.getElementById('assignmentNotes').value = '';
+        }
+
+        function editAssignment(button) {
+            const assignmentItem = button.closest('.assignment-item');
+            const assignmentName = prompt('Edit assignment name:', assignmentItem.querySelector('span').innerText);
+            const assignmentNotes = prompt('Edit assignment notes:', assignmentItem.querySelector('p').innerText);
+
+            if (assignmentName !== null && assignmentNotes !== null) {
+                assignmentItem.querySelector('span').innerText = assignmentName;
+                assignmentItem.querySelector('p').innerText = assignmentNotes;
+            }
+        }
+
+        function deleteAssignment(button) {
+            const assignmentItem = button.closest('.assignment-item');
+            assignmentItem.remove();
+        }
+
         displayWelcomeMessage();
+        showContent('assignments');
     </script>
 </body>
 </html>
